# deaddit

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test_admin.py  test_routes.py
deaddit/: __init__.py  admin.py  api.py  config.py  jobs.py  loader.py  models.py  routes.py  utils.py  websocket.py
deaddit/agent/: __init__.py  actions.py  brain.py  config.py  core.py  personality.py
deaddit/data/: ingest1.json  load_seed_data.py  posts.sql  prompts.md  subdeaddits_base.json  subs.json  test_comments.sql  users.json
deaddit/static/: style.css
deaddit/static/admin/: content.js
deaddit/templates/: .index.html.swp  base.html  index.html  list_subdeaddit.html  post.html  setup.html  subdeaddit.html  user_profile.html  users_list.html
deaddit/templates/admin/: agent_detail.html  agents.html  base.html  content.html  dashboard.html  generate.html  job_detail.html  jobs.html  login.html  settings.html
deaddit/templates/partials/: post_list.html
